app/components/vto/vto.css
#logo-tenstud {
  margin-top: 1em;
}

.loading {
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 999;
  background: #000;
  margin-top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.device-selector-container select {
  margin-right: 1em;
  border-radius: 20px;
  min-height: 30px;
  padding: 0 1em;
  background-color: rgb(37, 37, 37);
  color: #D3d3d3;
  border: none;
}

.device-selector-container button {
  background-color: green;
  color: white;
  border-radius: 20px;
  min-height: 30px;
  padding: 0 1em;
  box-shadow: none;
  border: none;
}

.device-selector-container button:hover {
  cursor: pointer;
  box-shadow: 0 0 10px 5px rgba(88, 228, 130, 0.2);
  transition: 0.2s;
}

.vto-container {
  position: relative;
}

.setting-container {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 11;
}
.setting-control-btn {
  background-color: rgba(128, 132, 150, 0.45);
  width: 32px;
  height: 32px;
  padding: 0;
  border-radius: 20px;
  font-size: 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.sliders-tab {
  width: 100%;
  height: 136px;
  background-color: rgba(27, 31, 58, 0.6);
  backdrop-filter: blur(5px);
  padding: 14px 46px 32px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.slider-tab-btn {
  cursor: pointer;
  background-color: rgba(27, 31, 58, 0.6);
  color: #FFFFFF;
  font-size: 0.8rem;
  padding: 4px 16px;
  border-radius: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
}
.slider-tab-btn.active {
  background-color: rgba(255, 255, 255, 0.6);
  color: #1B1F3A;
}
.slider-tab-btn:hover {
  background-color: rgba(255, 255, 255, 0.6);
  color: #1B1F3A;
}

.canvas-wrapper {
  position: relative;
  grid-template-columns: 1fr;
  margin-bottom: 1em;
  overflow: hidden;
  margin: 0 auto;
}

.video-container {
  position: relative;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,.6);
}
.init-instruction {
  position: absolute;
  width: 100%;
  top: 10%;
  font-size: 1.2em;
  text-align: center;
  padding: 0 12px;
}
.detection-button-container {
  position: absolute;
  display: flex;
  width: 100%;
  justify-content: center;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
}
.detection-button {
  cursor: pointer;
  background-color: #CFFF5E;
  color: #1B1F3A;
  border-radius: 40px;
  min-height: 30px;
  box-shadow: none;
  border: none;
  z-index: 10;
  font-size: 1.1em;
  padding: 12px 40px;
}

.watermark {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  bottom: 5%;
  right: 50%;
  transform: translate(50%, 50%);
  font-size: 0.8em;
  z-index: 10;
  color: #1B1F3A;
  font-weight: 700;
}

.watermark a {
  text-decoration: none;
  color: #ff557c;
  font-size: 1em;
  font-weight: 600;
}

.watermark img {
  height: 24px;
  margin-left: 6px;
}

.video-container video {
  display: inline;
  background-color: rgb(37, 37, 37);
  transform-origin: center center;
  transform: rotateY(180deg);
  transition: all 1s ease;
}

.smoothing-canvas {
  display: inline;
  position: absolute;
  transform: rotateY(180deg);
  transition: all 1s ease;
}

.canvas-container canvas {
  display: none;
  background-color: rgb(37, 37, 37);
}

.three-canvas-container {
  position: absolute;
  top: 0;
  left: 0;
}

.three-canvas-container canvas {
  display: none;
  transition: all 1s ease;
}

.button-container {
  display: flex;
  margin-top: 1em;
  gap: 0.5em;
}

.ring-selector {
  text-align: start;
}

.image-selector {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  margin-bottom: 2em;
  gap: 1em;
}

.image-selector .finger-switch-button {
  cursor: pointer;
  border: none;
  border-radius: 10px;
  font-size: 1.2em;
  background-color: #ffffff;
  color: #000000;
}

.instruction {
  position: absolute;
  display: flex;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  transition: 0.2s;
  opacity: 0;
  background-color: rgba(0,0,0,.7);
}
.instruction-item {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.instruction.show {
  opacity: 1;
}
.instruction-text {
  font-size: 1.1em;
  padding: 2em 2em 1em;
  margin: 0;
  text-align: center;
}
.instruction-image {
  height: 300px;
  transition: 0.2s;
  padding: 50px 0;
}
@media (max-width: 986px) {
  .instruction-image {
    object-fit: cover;
  }
}

.bubbles {
  display: flex;
  flex-direction: column;
  gap: 20px;
  position: absolute;
  right: 20px;
  height: 300px;
  top: calc(50% - 100px);
  z-index: 11;
}

.bubble {
  background-color: rgba(128, 132, 150, 0.45);
  width: 32px;
  height: 32px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

